--- a/RMGService/MonitoringApp/package.json
+++ b/RMGService/MonitoringApp/package.json
@@ -4,7 +4,7 @@
   "description": "This app is use for monitoring real time data",
   "main": "",
   "scripts": {
-    "server": "cd backend && npm i && node server.js",
+    "server": "cd apiService && npm i && node index.js",
     "front": "webpack-dev-server --dev --inline -d --colors --display-error-details --display-cached --port 3000",
     "start": "npm run front",
     "build": "rimraf dist && webpack --progress --profile --colors",
@@ -30,11 +30,11 @@
     "@angular/platform-server": "2.0.1",
     "@angular/router": "3.0.1",
     "angular2-jwt": "0.1.23",
-    "jquery": "^3.1.0",
+    "jquery": "^2.2.4",
     "bootstrap": "^3.3.7",
-    "d3": "3.5.3",
-    "ng2-nvd3": "1.1.3",
     "nvd3": "1.8.4",
+    "d3": "3.5.3",
+    "ng2-nvd3": "1.1.3",    
     "core-js": "^2.4.1",
     "jwt-decode": "^2.0.1",
     "rxjs": "5.0.0-beta.12",
