Added service to pass selected value from menu to monitoring component

--- a/RMGService/MonitoringApp/tsconfig.json
+++ b/RMGService/MonitoringApp/tsconfig.json
@@ -9,8 +9,10 @@
   },
   "files": [
     "typings/tsd.d.ts",  
-    "src/app.ts",    
+    "src/app.ts",
+    "src/pipes/index.ts",   
     "src/monitor/index.ts",
+    "src/service/index.ts",
     "src/dashboard/index.ts",
     "src/index.ts"   
   ],
