made some changes in model as per api response

--- a/RMGService/MonitoringApp/apiService/properties/endpoint.properties
+++ b/RMGService/MonitoringApp/apiService/properties/endpoint.properties
@@ -2,13 +2,21 @@
 #Content of properties file
 
 [olp-adapter-service-access]
-api.search.endpoint =  http://10.66.1.172:9200/graylog2_0/_search
+api.search.endpoint =  http://10.45.77.235:9500/graylog22*/_search
 
 [open-am]
-security.endpoint = 
+security.authenticate.endpoint = http://idpqs.royalmailgroup.com/opensso/identity/authenticate
+security.logout.endpoint = http://idpqs.royalmailgroup.com/opensso/identity/logout
+
 
 [olp-adapter-service-access]
 api.proxy.ip = 10.74.242.10
 
 [olp-adapter-service-access]
 api.proxy.port = 80 
+
+[security]
+ldap.endpoint = ldap://ldap.forumsys.com:389
+
+[security]
+ldap.domain = dc=example,dc=com
