--- a/RMGService/MonitoringApp/apiService/properties/queries.properties
+++ b/RMGService/MonitoringApp/apiService/properties/queries.properties
@@ -1,6 +1,11 @@
 # contents of properties file
 
 [olp-adapter-service-access]
-api.search.query = {"size": 0,"query":{"filtered": {"query":{"bool":{"must":[{"match": {"facility":"olp-adapter-service-access"}}]}},"filter":{"range":{"timestamp":{"gt":"1493363491000","lt":"1493367091000"}}}}},"aggs": {"words": {"terms": {"field":"X-Partner"},"aggs": {"responsecodes": {"terms": {"field": "_statusCode"}}}}}}
+api.search.vendors=Amazon,eBay,StoreFeeder,Stubhub,PayPal 
 
+[olp-adapter-service-access]
+api.search.query = {"size":0,"query":{"filtered":{"query":{"bool":{"must":[{"match":{"facility":"postage-third-party-adapter-access"}},{"match":{"X-Partner":"Vendor"}},{"match":{"_statusCode":"200"}}]}},"filter":{"range":{"timestamp":{"gt":"1493363491000","lt":"1493367091000"}}}}}}
+#{"size": 0,"query":{"filtered": {"query":{"bool":{"must":[{"match": {"facility":"olp-adapter-service-access"}}]}},"filter":{"range":{"timestamp":{"gt":"1493363491000","lt":"1493367091000"}}}}},"aggs": {"words": {"terms": {"field":"X-Partner"},"aggs": {"responsecodes": {"terms": {"field": "_statusCode"}}}}}}
 
+[olp-adapter-service-access]
+api.failsearch.query = {"size":0,"query":{"filtered":{"query":{"bool":{"must":[{"match":{"facility":"postage-third-party-adapter-access"}},{"match":{"X-Partner":"Vendor"}}],"must_not":{"term":{"_statusCode":"200"}}}},"filter":{"range":{"timestamp":{"gt":"1493363491000","lt":"1493367091000"}}}}}} 
