Added Timer Component

--- a/RMGService/MonitoringApp/package.json
+++ b/RMGService/MonitoringApp/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "https://github.com/ramsingh83/MonitoringApp"
   },
-  "contributors": [
+  "Author": [
     "Ram Singh <ram.c.singh@capgemini.com>"
   ],
   "license": "ISC",
