removed end point due to security reason
One can create a response json file and return that on service call. to run the app locally

--- a/RMGService/MonitoringApp/apiService/properties/endpoint.properties
+++ b/RMGService/MonitoringApp/apiService/properties/endpoint.properties
@@ -2,15 +2,15 @@
 #Content of properties file
 
 [olp-adapter-service-access]
-api.search.endpoint =  http://10.45.77.235:9500/graylog22*/_search
+api.search.endpoint =  
 
 [open-am]
-security.authenticate.endpoint = http://idpqs.royalmailgroup.com/opensso/identity/authenticate
-security.logout.endpoint = http://idpqs.royalmailgroup.com/opensso/identity/logout
+security.authenticate.endpoint = 
+security.logout.endpoint =
 
 
 [olp-adapter-service-access]
-api.proxy.ip = 10.74.242.10
+api.proxy.ip = 
 
 [olp-adapter-service-access]
 api.proxy.port = 80 
