--- a/RMGService/MonitoringApp/package.json
+++ b/RMGService/MonitoringApp/package.json
@@ -1,67 +1,117 @@
 {
-  "name": "MonitoringAPP",
-  "version": "0.0.1",
-  "description": "This app is use for monitoring real time data of online postage api",
-  "main": "",
+  "name": "MonitoringApplication",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Monitor the status of online Poatage API Status",
   "scripts": {
-    "server": "cd apiService && npm i && node index.js",
-    "front": "webpack-dev-server --dev --inline -d --colors --display-error-details --display-cached --port 3000 --host 0.0.0.0",
-    "start": "npm run front",
-    "build": "rimraf dist && webpack --progress --profile --colors",
-    "test": "karma start"
+    "test:once": "karma start config/karma.conf.js --single-run",
+    "build": "rimraf dist && webpack --config config/webpack.prod.js --bail",
+    "serve": "lite-server -c=bs-config.json",   
+    "start": "webpack-dev-server --inline --progress --port 3000",    
+    "test": "karma start karma.webpack.conf.js",
+    "build:watch": "tsc -p src/ -w",    
+    "serve:upgrade": "http-server",
+    "build:aot": "ngc -p tsconfig-aot.json && rollup -c rollup-config.js",
+    "serve:aot": "lite-server -c bs-config.aot.json",
+    "build:babel": "babel src -d src --extensions \".es6\" --source-maps",
+    "copy-dist-files": "node ./copy-dist-files.js",
+    "i18n": "ng-xi18n",
+    "lint": "tslint ./src/**/*.ts -t verbose",
+    "ng": "ng",
+    "e2e": "ng e2e"
   },
+  "keywords": [],
   "repository": {
     "type": "git",
     "url": "https://github.com/ramsingh83/MonitoringApp"
   },
-  "Author": [
-    "Ram Singh <ram.c.singh@capgemini.com>"
-  ],
-  "license": "ISC",
+  "author": "Ram Singh <ram.c.singh@capgemini.com>",
+  "license": "No Licesnse",
   "dependencies": {
-    "@angular/common": "2.0.1",
-    "@angular/compiler": "2.0.1",
-    "@angular/core": "2.0.1",
-    "@angular/forms": "2.0.1",
-    "@angular/http": "2.0.1",
-    "@angular/platform-browser": "2.0.1",
-    "@angular/platform-browser-dynamic": "2.0.1",
-    "@angular/platform-server": "2.0.1",
-    "@angular/router": "3.0.1",
+    "@angular/animations": "^4.2.0",
+    "@angular/common": "^4.2.0",
+    "@angular/compiler": "^4.2.0",
+    "@angular/compiler-cli": "^4.2.0",
+    "@angular/core": "^4.2.0",
+    "@angular/forms": "^4.2.0",
+    "@angular/http": "^4.2.0",
+    "@angular/platform-browser": "^4.2.0",
+    "@angular/platform-browser-dynamic": "^4.2.0",
+    "@angular/platform-server": "^4.2.0",
+    "@angular/router": ">=3.0.0",
+    "@angular/tsc-wrapped": "^4.2.0",
+    "@angular/upgrade": "^4.2.0",
+    "angular-in-memory-web-api": "^0.3.2",
     "angular2-jwt": "0.1.23",
-    "jquery": "^2.2.4",
-    "bootstrap": "^3.3.7",
-    "nvd3": "1.8.4",
-    "d3": "3.5.3",
-    "ng2-nvd3": "1.1.3",    
     "core-js": "^2.4.1",
     "jwt-decode": "^2.0.1",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "~0.6.25"
+    "rxjs": "5.0.1",
+    "systemjs": "0.19.39",
+    "zone.js": "^0.8.4",
+    "jquery": "^2.2.4",
+    "bootstrap": "^3.3.7",
+    "d3": "^3.5.17",
+    "nvd3": "^1.8.5",
+    "angular2-nvd3": "1.0.7"
   },
   "devDependencies": {
-    "@types/d3": "^4.8.0",
-    "@types/nvd3": "^1.8.37",
-    "css-loader": "^0.25.0",
-    "exports-loader": "^0.6.3",
-    "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "@types/angular": "^1.5.16",
+    "@types/angular-animate": "^1.5.5",
+    "@types/angular-cookies": "^1.4.2",
+    "@types/angular-mocks": "^1.5.5",
+    "@types/angular-resource": "^1.5.6",
+    "@types/angular-route": "^1.3.2",
+    "@types/angular-sanitize": "^1.3.3",
+    "@types/jasmine": "2.5.36",
+    "@types/node": "^6.0.45",
+    "@types/nvd3": "^1.8.33",
+    "@types/d3": "^3.5.35",
+    "@types/reflect-metadata" :"0.0.5",
+    "babel-cli": "^6.16.0",
+    "babel-preset-angular2": "^0.0.2",
+    "babel-preset-es2015": "^6.16.0",
+    "canonical-path": "0.0.2",
+    "concurrently": "^3.0.0",
+    "http-server": "^0.9.0",
+    "jasmine": "~2.4.1",
+    "jasmine-core": "~2.4.1",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "lite-server": "^2.2.2",
+    "lodash": "^4.16.2",
+    "phantomjs-prebuilt": "^2.1.7",
+    "protractor": "~5.1.0",
+    "rollup": "^0.41.6",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "2.0.0",
+    "rollup-plugin-uglify": "^1.0.1",
+    "source-map-explorer": "^1.3.2",
+    "tslint": "^3.15.1",
+    "typescript": "~2.3.2",
+    "@angular/cli": "^1.0.0",
+    "ts-node": "^1.3.0",
+    "angular2-template-loader": "^0.6.0",
+    "awesome-typescript-loader": "^3.0.4",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "2.0.0-beta.5",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.15.0",
-    "imports-loader": "^0.6.5",
-    "json-loader": "^0.5.4",
+    "html-webpack-plugin": "^2.16.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.1",
+    "null-loader": "^0.1.1",
     "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
-    "ts-loader": "^0.8.1",
-    "tsconfig-lint": "^0.12.0",
-    "tslint": "^3.7.1",
-    "tslint-loader": "^2.1.3",
-    "typedoc": "^0.4.3",
-    "typescript": "~2.0.3",
-    "typings": "^1.3.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1"
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.4.1",
+    "webpack-merge": "^3.0.0"
+  },
+   "peerDependencies": {
+    "rxjs": "^5.0.1"
   }
 }
